force-app/main/default/objects/profiletracker__c/profiletracker__c.object-meta.xml
<CustomObject>
    <label>profiletracker</label>
    <nameField>
        <label>profileTracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>profiletrackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>