force-app/main/default/objects/profiletracker__c/fields/IsCustomizeAppSelected__c.field-meta.xml
<CustomField>
    <fullName>IsCustomizeAppSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCustomizeAppSelected</label>
    <type>Checkbox</type>
</CustomField>