force-app/main/default/objects/profiletracker__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <type>TextArea</type>
</CustomField>