force-app/main/default/objects/profiletracker__c/fields/ProfileId__c.field-meta.xml
<CustomField>
    <fullName>ProfileId__c</fullName>
    <label>ProfileId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>